[gd_scene load_steps=8 format=3 uid="uid://bc7ka0053noyb"]

[ext_resource type="Script" path="res://scripts/Menu.gd" id="1_s7svw"]
[ext_resource type="Texture2D" uid="uid://5b715nokfi38" path="res://assets/gfx/Menu/BGMenuTEMP.jpg" id="2_mra1w"]
[ext_resource type="Texture2D" uid="uid://d2vff2u4cquxc" path="res://assets/gfx/Menu/HowTo.png" id="3_fj1jo"]
[ext_resource type="Texture2D" uid="uid://c0la3jc5omihc" path="res://assets/gfx/Menu/TitleLogoTEMP.png" id="3_hvxcm"]
[ext_resource type="Texture2D" uid="uid://omnxng7i1e8c" path="res://assets/gfx/Menu/Play.png" id="4_mcglj"]
[ext_resource type="AudioStream" uid="uid://c3tijyvbg4uo4" path="res://assets/sfx/Themes/Main_Menu_Theme.wav" id="4_put7u"]
[ext_resource type="Texture2D" uid="uid://cwrrjw5bhqwm0" path="res://assets/gfx/Menu/Quit.png" id="5_a2ta5"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_s7svw")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(1.74545, 1.8)
texture = ExtResource("2_mra1w")

[node name="Controls" type="TextureButton" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 504.0
offset_top = 408.0
offset_right = 1550.0
offset_bottom = 989.0
grow_vertical = 0
scale = Vector2(0.137679, 0.137679)
texture_normal = ExtResource("3_fj1jo")
ignore_texture_size = true
stretch_mode = 3

[node name="StartButton" type="TextureButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 440.0
offset_top = 296.0
offset_right = 1947.0
offset_bottom = 887.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1809, 0.1809)
texture_normal = ExtResource("4_mcglj")
ignore_texture_size = true
stretch_mode = 3

[node name="QuitButton" type="TextureButton" parent="."]
offset_left = 480.0
offset_top = 520.0
offset_right = 1516.0
offset_bottom = 1142.0
scale = Vector2(0.185102, 0.185102)
texture_normal = ExtResource("5_a2ta5")
ignore_texture_size = true
stretch_mode = 3

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(576, 112)
scale = Vector2(0.274691, 0.274691)
texture = ExtResource("3_hvxcm")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_put7u")
autoplay = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[connection signal="pressed" from="Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
